# FreezyLang

./: .gitignore  CHANGELOG.md  Freezy.cabal  FreezyLang.hs  FreezyLexer.hs  README.md  TODO.md  sample.fry
app/: Freezy.hs  Main.hs
docs/: Freezy.html  FreezyLang.html  FreezyLexer.html  doc-index.html  index.html  mini_Freezy.html  mini_FreezyLang.html  mini_FreezyLexer.html
examples/: decToBin.fry  fib.fry  scope.fry
lib/: FreezyEvaluator.hs  FreezyLang.hs  FreezyLexer.hs  FreezyMain.hs  FreezyOperators.hs  FreezyParser.hs
