name:                Freezy
version:             0.0.0
synopsis:            A simple interpreted programming language implemented in 
                     Haskell.
homepage:            https://github.com/ccntrq/Freezy#readme
license:             MIT
license-file:        LICENSE
author:              Alex 'ccntrq' Pankoff
copyright:           2017 Alexander Pankoff
category:            Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  exposed-modules:     FreezyLang
                     , FreezyLexer
                     , FreezyParser
  build-depends:       base >= 4.7 && < 5
                     , mtl == 2.2.1
                     , monad-loops == 0.4.3
  default-language:    Haskell2010

executable freezy
  hs-source-dirs:      app
  main-is:             Freezy.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Freezy -Wall
  build-depends:       base
                     , Freezy
                     , readline
                     , mtl == 2.2.1
  default-language:    Haskell2010
